--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <figure>
-<img src="20190219/01.jpeg">
+<img src="img/20190219/01.jpeg">
 </figure>
 
 <!--
@@ -60,11 +60,11 @@ t_video5442749343956206057-gleb.mp4
 -->
 
 <h3>
-<a href="mircube-datasheet-0.0.3.pdf" target="_blank">mircube-datasheet-0.0.3.pdf</a>
+<a href="doc/mircube-datasheet-0.0.3.pdf" target="_blank">mircube-datasheet-0.0.3.pdf</a>
 <br/>
-<a href="mir-cosmofest-2018.pdf" target="_blank">mir-cosmofest-2018.pdf</a>
+<a href="doc/mir-cosmofest-2018.pdf" target="_blank">mir-cosmofest-2018.pdf</a>
 <br/>
-<a href="mir-hypernet-0.0.1.pdf" target="_blank">mir-hypernet-0.0.1.pdf</a>
+<a href="doc/mir-hypernet-0.0.1.pdf" target="_blank">mir-hypernet-0.0.1.pdf</a>
 </h3>
 
 <br>
@@ -95,12 +95,12 @@ t_video5442749343956206057-gleb.mp4
 
 <figure>
 <!--
-<img src="20190118/01.jpeg">
+<img src="img/20190118/01.jpeg">
 <br/>
 -->
-<img src="20190118/02.jpeg">
+<img src="img/20190118/02.jpeg">
 <br/>
-<img src="20190118/03.jpeg">
+<img src="img/20190118/03.jpeg">
 </figure>
 
 <br/>
@@ -109,34 +109,34 @@ t_video5442749343956206057-gleb.mp4
 <h3>20190130</h3>
 
 <figure>
-<img src="20190130/02.jpeg">
+<img src="img/20190130/02.jpeg">
 <br/>
-<img src="20190130/03.jpeg">
+<img src="img/20190130/03.jpeg">
 <br/>
-<img src="20190130/04.jpeg">
+<img src="img/20190130/04.jpeg">
 <br/>
-<img src="20190130/05.jpeg">
+<img src="img/20190130/05.jpeg">
 <br/>
 <!--
-<img src="20190130/06.jpeg">
+<img src="img/20190130/06.jpeg">
 <br/>
-<img src="20190130/07.jpeg">
+<img src="img/20190130/07.jpeg">
 <br/>
-<img src="20190130/08.jpeg">
+<img src="img/20190130/08.jpeg">
 <br/>
 -->
-<img src="20190130/09.jpeg">
+<img src="img/20190130/09.jpeg">
 <br/>
-<img src="20190130/10.jpeg">
+<img src="img/20190130/10.jpeg">
 <br/>
-<img src="20190130/11.jpeg">
+<img src="img/20190130/11.jpeg">
 <br/>
-<img src="20190130/12.jpeg">
+<img src="img/20190130/12.jpeg">
 <br/>
-<img src="20190130/13.jpeg">
+<img src="img/20190130/13.jpeg">
 <!--
 <br/>
-<img src="20190130/14.jpeg">
+<img src="img/20190130/14.jpeg">
 -->
 </figure>
 
@@ -146,7 +146,7 @@ t_video5442749343956206057-gleb.mp4
 <h3>20190131</h3>
 
 <figure>
-<img src="20190131/01.jpeg">
+<img src="img/20190131/01.jpeg">
 <figure/>
 
 <br/>
@@ -155,12 +155,12 @@ t_video5442749343956206057-gleb.mp4
 <h3>20190209</h3>
 
 <figure>
-<img src="20190209/01.jpeg">
+<img src="img/20190209/01.jpeg">
 <br/>
-<img src="20190209/02.jpeg">
+<img src="img/20190209/02.jpeg">
 <!--
 <br/>
-<img src="20190209/03.jpeg">
+<img src="img/20190209/03.jpeg">
 -->
 <figure/>
 
@@ -170,9 +170,9 @@ t_video5442749343956206057-gleb.mp4
 <h3>20190211</h3>
 
 <figure>
-<img src="20190211/01.jpeg">
+<img src="img/20190211/01.jpeg">
 <br/>
-<img src="20190211/02.jpeg">
+<img src="img/20190211/02.jpeg">
 <figure/>
 
 <br/>
@@ -181,21 +181,21 @@ t_video5442749343956206057-gleb.mp4
 <h3>20190214</h3>
 
 <figure>
-<img src="20190214/01.jpeg">
+<img src="img/20190214/01.jpeg">
 <br/>
-<img src="20190214/02.jpeg">
+<img src="img/20190214/02.jpeg">
 <br/>
-<img src="20190214/03.jpeg">
+<img src="img/20190214/03.jpeg">
 <br/>
-<img src="20190214/04.jpeg">
+<img src="img/20190214/04.jpeg">
 <br/>
-<img src="20190214/05.jpeg">
+<img src="img/20190214/05.jpeg">
 <br/>
-<img src="20190214/06.jpeg">
+<img src="img/20190214/06.jpeg">
 <br/>
-<img src="20190214/07.jpeg">
+<img src="img/20190214/07.jpeg">
 <br/>
-<a href="t_video5416048850831933982.mp4" target="_blank">t_video5416048850831933982.mp4</a>
+<a href="img/20190214/t_video5416048850831933982.mp4" target="_blank">t_video5416048850831933982.mp4</a>
 <figure/>
 
 <br/>
@@ -204,33 +204,33 @@ t_video5442749343956206057-gleb.mp4
 <h3>20190215</h3>
 
 <figure>
-<img src="20190215/01.jpeg">
+<img src="img/20190215/01.jpeg">
 <br/>
-<img src="20190215/02.jpeg">
+<img src="img/20190215/02.jpeg">
 <br/>
-<img src="20190215/03.jpeg">
+<img src="img/20190215/03.jpeg">
 <br/>
-<img src="20190215/04.jpeg">
+<img src="img/20190215/04.jpeg">
 <br/>
-<img src="20190215/05.jpeg">
+<img src="img/20190215/05.jpeg">
 <br/>
-<img src="20190215/06.jpeg">
+<img src="img/20190215/06.jpeg">
 <br/>
-<img src="20190215/07.jpeg">
+<img src="img/20190215/07.jpeg">
 <br/>
-<img src="20190215/08.jpeg">
+<img src="img/20190215/08.jpeg">
 <br/>
-<img src="20190215/09.jpeg">
+<img src="img/20190215/09.jpeg">
 <br/>
-<img src="20190215/10.jpeg">
+<img src="img/20190215/10.jpeg">
 <br/>
-<img src="20190215/11.jpeg">
+<img src="img/20190215/11.jpeg">
 <br/>
-<img src="20190215/12.jpeg">
+<img src="img/20190215/12.jpeg">
 <br/>
-<img src="20190215/13.jpeg">
+<img src="img/20190215/13.jpeg">
 <br/>
-<img src="20190215/14.jpeg">
+<img src="img/20190215/14.jpeg">
 <figure/>
 
 <br/>
@@ -239,7 +239,7 @@ t_video5442749343956206057-gleb.mp4
 <h3>20190216</h3>
 
 <figure>
-<img src="20190216/20190216.jpeg">
+<img src="img/20190216/20190216.jpeg">
 <figure/>
 
 <br/>
@@ -249,34 +249,34 @@ t_video5442749343956206057-gleb.mp4
 <h3>20190219</h3>
 
 <figure>
-<img src="20190219/20190219.jpeg">
+<img src="img/20190219/20190219.jpeg">
 <br/>
-<img src="20190219/01.jpeg">
+<img src="img/20190219/01.jpeg">
 <br/>
-<img src="20190219/02.jpeg">
+<img src="img/20190219/02.jpeg">
 <br/>
-<img src="20190219/03.jpeg">
+<img src="img/20190219/03.jpeg">
 <br/>
-<img src="20190219/04.jpeg">
+<img src="img/20190219/04.jpeg">
 <br/>
-<img src="20190219/05.jpeg">
+<img src="img/20190219/05.jpeg">
 <br/>
-<img src="20190219/06.jpeg">
+<img src="img/20190219/06.jpeg">
 <br/>
-<img src="20190219/07.jpeg">
+<img src="img/20190219/07.jpeg">
 <br/>
-<img src="20190219/08.jpeg">
+<img src="img/20190219/08.jpeg">
 <br/>
-<img src="20190219/09.jpeg">
+<img src="img/20190219/09.jpeg">
 <br/>
-<img src="20190219/10.jpeg">
+<img src="img/20190219/10.jpeg">
 <br/>
 <!--
-<img src="20190219/11.jpeg">
+<img src="img/20190219/11.jpeg">
 <br/>
-<img src="20190219/12.jpeg">
+<img src="img/20190219/12.jpeg">
 <br/>
-<img src="20190219/13.jpeg">
+<img src="img/20190219/13.jpeg">
 -->
 <figure/>
 
