--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 <link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/mir.css">
 <link rel="stylesheet" href="css/earth.css">
 <title>MIR</title>
@@ -160,7 +161,7 @@ t_video5442749343956206057-gleb.mp4
 
 <figure>
 <img src="img/20190131/01.jpeg">
-<figure/>
+</figure>
 
 <br/>
 
@@ -175,7 +176,7 @@ t_video5442749343956206057-gleb.mp4
 <br/>
 <img src="img/20190209/03.jpeg">
 -->
-<figure/>
+</figure>
 
 <br/>
 
@@ -186,7 +187,7 @@ t_video5442749343956206057-gleb.mp4
 <img src="img/20190211/01.jpeg">
 <br/>
 <img src="img/20190211/02.jpeg">
-<figure/>
+</figure>
 
 <br/>
 
@@ -209,7 +210,7 @@ t_video5442749343956206057-gleb.mp4
 <img src="img/20190214/07.jpeg">
 <br/>
 <a href="img/20190214/t_video5416048850831933982.mp4" target="_blank">t_video5416048850831933982.mp4</a>
-<figure/>
+</figure>
 
 <br/>
 
@@ -244,7 +245,7 @@ t_video5442749343956206057-gleb.mp4
 <img src="img/20190215/13.jpeg">
 <br/>
 <img src="img/20190215/14.jpeg">
-<figure/>
+</figure>
 
 <br/>
 
@@ -291,7 +292,55 @@ t_video5442749343956206057-gleb.mp4
 <br/>
 <img src="img/20190219/13.jpeg">
 -->
-<figure/>
+</figure>
+
+<br>
+<br>
+
+<div class="container">
+
+<h1>Вопросы и ответы</h1>
+
+<h2>О чем это?</h2>
+
+<p>
+Мы назвались как "Институт Цифровой Экономики им. Глушкова". Глобальная цель: создание 1000 экономических децентрализованных отраслевых платформ для разных видов деятельности (всего по ОКВЭД существует порядка 2500 видов деятельности). Доя реализации задуманного берём готовые блокчейн решения. В приоритете PoS (для открытых блокчейн систем) и BFT (для приватных распределенных реестров). Подробнее: http://dei.su
+</p>
+
+<p>
+Цифровые платформы - это инструмент для надежной фиксации договоренностей между участниками и инструмент решения споров. Внутри платформ все договоренности записываются в виде сообщений (транзакций). Для реального сектора в российских реалиях (и не только российских) необходим такой документооборот, который не доступен для конкурентов и прочих третьих лиц. Для этого тело сообщения шифруется. Код на расшифровку доступен только сторонам сделки. Для третьих лиц (в частности для арбитра) код может быть раскрыт одной из сторон. ... Это у нас реализуется в виде инструмента docum: http://docum.dei.su
+</p>
+
+<p>
+Реализован инструмент для учёта вкладов в стартапах и в проекты. Юридически это делается по договору простого товарищества (ГК РФ 1041, в других юрисдикциях есть аналогичные юридические формы). Запись вкладов между товарищами вполне возможна в реестре на блокчейне в виде токенов. Эта методика и инструмент позволяет однозначно определить как делить "шкуру неубитого медведя" в будущем. В качестве инструмента сделали http://buidl.dei.su
+</p>
+
+<p>
+Для простоты установки и настройки функционала для бизнеса мы сделали микрокомпьютеры с предустановленным софтом (нода+клиенты). Сделали в виде Кубсат (10х10х10 см). Проект назвали МирКуб. http://cube.mir.dei.su
+</p>
+
+<p>
+МирКуб мы продаём по 30 тыс.руб. ... Вообще ищем заинтересованных в автоматизации владельцев бизнеса, тех кто хочет создать цифровую платформу - для того чтобы делать вместе.
+</p>
+
+
+<h2>Какую проблему решаете?</h2>
+
+<ol>
+<li>Повышение мотивации между участниками в стартапе, где применяем учет вкладов для учета долей.
+<li>Повышение мотивации между членами команды в компании для распределения премиального фонда.
+<li>Между отдельными компаниями, используя передачу активов и запись договоренностей через блокчейн (в зашифрованном виде).
+<li>Снизить издержки и повысить эффективность применив синхронизацию между устройствами для автоматизации внутренних производственных процессов через распределенные реестры. (в разработке)
+</ol>
+
+
+<h2>Сколько стоит SaaS?</h2>
+
+<p>
+Предварительно подсчитывали что в формате SaaS стоимость для стартапов и для компаний: 999 руб с одного человека в месяц. Однако, нацеленность сейчас на продажу решения с разворачиванием распределенной сети для группы компаний. Предварительная оценка на создание распределенной сети между несколькими компаниями от 700 тыс.руб.
+</p>
+
+</div>
 
 <br>
 <br>
